# LightTrain

./: .env.example  .gitignore  FIXLOG.md  LICENSE  PLAN_v0.5.5.md  README.md  README.zh-CN.md  constraints.txt  pyproject.toml
.github/workflows/: test.yaml
docs/: README.md  registry_and_protocols.md  user_guide.md
docs/changelog/: KNOWN_ISSUES.md  v0.1.1  v0.1.2  v0.1.3  v0.1.3.md  v0.1.4  v0.1.5  v0.1.6.md  v0.1.7  v0.2.0.md  v0.2.2.md  v0.2.3.md  v0.2.5.md  v0.2.6.md  v0.3.0.md  v0.3.2.md  v0.4.0.md  v0.4.3.md  v0.4.4.md
docs/concepts/: architecture.md  architecture.zh-CN.md  data-prepgraph.md  data-prepgraph.zh-CN.md  training.md  training.zh-CN.md
docs/extending/: architectures.md  architectures.zh-CN.md  extending.md  extending.zh-CN.md  recipes.md  recipes.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md
docs/guide/: cli.md  cli.zh-CN.md  configuration.md  configuration.zh-CN.md  getting-started.md  getting-started.zh-CN.md
docs/operations/: diagnostics.md  diagnostics.zh-CN.md  distributed.md  distributed.zh-CN.md
docs/reference/: registry.md  registry.zh-CN.md
examples/: README.md  diffusion_eps.py  dpo_offline.py  ff_demo.py  fork_resume.py  grpo.py  image_cls.py  jepa.py  lab_components.py  mezo_sft.py  offload_fullparam.py  online_distill.py  pcn_demo.py  ppo_online.py  pretrain_causal.py  pretrain_rwkv.py  produce_teacher.py  qlora.py  sft_chat.py  sft_chat_hf.py  student_kd.py  sweep_demo.py  vlm_sft.py
examples/MiniMind/: LICENSE  README.md
examples/nanoGPT/: README.md  components.py  model.py  sample.py
examples/references/: README.md  diffusion_eps.py  dpo_offline.py  ff_demo.py  fork_resume.py  grpo.py  image_cls.py  jepa.py  lab_components.py  mezo_sft.py  offload_fullparam.py  online_distill.py  pcn_demo.py  ppo_online.py  pretrain_causal.py  pretrain_rwkv.py  produce_teacher.py  qlora.py  sft_chat.py  sft_chat_hf.py  student_kd.py  sweep_demo.py  vision_components.py  vlm_sft.py
frontier_plugins/: README.md  __init__.py
frontier_plugins/architectures/: __init__.py
frontier_plugins/distributed/: __init__.py  _launcher.py
frontier_plugins/generation_backends/: __init__.py
frontier_plugins/layer_offload/: __init__.py  _adapters.py  _engine.py  _io.py  _streams.py
frontier_plugins/quant/: _qlora.py
frontier_plugins/update_rules/: __init__.py
lighttrain/: __init__.py  exceptions.py  protocols.py
lighttrain/architectures/: __init__.py  jepa.py  profile.py  transformer.py
lighttrain/artifacts/: __init__.py  base.py  dynamic_producer.py  joined_dataset.py  producer.py  store.py
lighttrain/builtin_plugins/: README.md  __init__.py
lighttrain/callbacks/: __init__.py  base.py  invariants.py
lighttrain/checkpoint/: __init__.py  manager.py
lighttrain/cli/: __init__.py  __main__.py  _app.py  _context.py  _helpers.py  _produce.py  _runtime.py
lighttrain/config/: __init__.py  _components.py  _exceptions.py  _loader.py  _models.py  _resolver.py  _schema.py  _user_modules.py
lighttrain/data/: __init__.py
lighttrain/diagnostics/: __init__.py  callback_isolation.py  crash_bundle.py  dead_neuron.py  frozen_step.py  grad_flow.py  index_page.py  loss_attribution.py  nan_hunter.py  nan_repro.py  oom_report.py  sample_preview.py
lighttrain/distributed/: __init__.py  _context.py  _noop.py  _protocols.py
lighttrain/engine/: __init__.py  _context.py  standard.py
lighttrain/eval/: __init__.py  generation_eval.py  judge.py  suite.py
lighttrain/invariants/: __init__.py  _dsl.py  builtins.py
lighttrain/lab/: __init__.py  ab_test.py  auto_report.py  compare.py  decision_record.py  estimate.py  fork.py  hypothesis.py  resume_verify.py  sweep.py
lighttrain/lineage/: __init__.py  dag.py  migration.py  retention.py  store.py
lighttrain/logging/: __init__.py  _bus.py
lighttrain/losses/: __init__.py  aux.py  core.py  distill.py  preference.py  rl.py
lighttrain/minimal/: __init__.py
lighttrain/models/: __init__.py  extras.py
lighttrain/objectives/: __init__.py  diffusion.py  flow_matching.py  jepa.py  masked_denoising.py  next_token.py
lighttrain/observability/: __init__.py
lighttrain/optim/: __init__.py  base.py  schedulers.py  wrappers.py
lighttrain/plugins/: __init__.py
lighttrain/prepgraph/: __init__.py  _banner.py  _fp.py  _io.py  dag.py  node.py  runner.py
lighttrain/realtime_control/: __init__.py  file_signals.py
lighttrain/registry/: __init__.py  _core.py  _exceptions.py
lighttrain/rl/: __init__.py  buffers.py  reward_adapters.py  rollout.py  value_heads.py
lighttrain/trainers/: __init__.py  _utils.py  (+12 more)
plugins/: README.md
recipes/: 3d_parallel.yaml  ddp.yaml  diffusion_eps.yaml  dpo_offline.yaml  ff_demo.yaml  fork_resume.yaml  fsdp.yaml  grpo.yaml  image_cls.yaml  jepa.yaml  mezo_sft.yaml  nano_fsdp.yaml  nano_model.yaml  nano_zero2.yaml  offload_fullparam.yaml  online_distill_demo.yaml  pcn_demo.yaml  ppo_online.yaml  pretrain_causal.yaml  pretrain_rwkv.yaml  produce_teacher.yaml  qlora.yaml  sft_chat.yaml  sft_chat_hf.yaml  student_kd.yaml  sweep_demo.yaml  sweep_lr.yaml  sweep_r15.yaml  tp_ddp.yaml  vlm_sft.yaml  zero2.yaml
tests/: _diagnostics.py  conftest.py  test_amp_wiring.py  test_apply_degrade.py  test_architectures_jepa.py  test_architectures_mamba.py  test_architectures_profile.py  test_architectures_rwkv.py  test_artifact_producer.py  test_artifact_store.py  test_axis_b_multi_optimizer.py  test_batch_validation.py  test_broad_except_logging.py  test_callback_isolation_sink.py  test_callbacks_builtins.py  test_callbacks_event_bus.py  test_checkpoint_atomic.py  test_checkpoint_full_state.py  test_cli_freeze_replay.py  test_code_snapshot.py  test_config.py  test_crash_bundle.py  test_cycle_warn_no_signal.py  test_data_core.py  test_data_processors.py  test_dead_neuron.py  test_distill_loss.py  test_distributed_context.py  test_doctor_cmd.py  test_doctor_dangling_edges.py  test_doctor_full.py  test_dpo_smoke.py  test_dynamic_producer.py  test_engine_standard.py  test_estimate.py  test_eval_metrics.py  test_eval_suite.py  test_eventbus_critical.py  test_exceptions.py  test_extras.py  (+87 more)
(+751 files in other folders)
