[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighttrain"
version = "0.4.0"
description = "PyTorch training framework for research labs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "lighttrain contributors" }]
keywords = ["pytorch", "training", "language-model", "research", "lab"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "omegaconf>=2.3.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "transformers>=5.0.0",
    "safetensors>=0.4.0",
    "tensorboard>=2.14.0",
    "datasets>=2.16.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15",
    "mypy>=2.0",
]
peft = ["peft>=0.7"]
quant = ["bitsandbytes>=0.43; platform_system == 'Linux'"]
offload = []
vllm = []
sweep = ["optuna>=3.0"]

[project.scripts]
lighttrain = "lighttrain.cli._app:app"

[tool.setuptools.packages.find]
include = ["lighttrain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "heavy: long-running CPU or training-loop tests; opt-in via -m heavy",
    "gpu: requires a CUDA device; opt-in via -m gpu",
]
addopts = '-v -m "not heavy and not gpu"'

# Coverage is opt-in (some torch + coverage combos clash on _add_docstr):
#   pytest --cov=lighttrain --cov-report=term-missing --cov-fail-under=75
[tool.coverage.run]
source = [
    # core seams/plumbing (concrete impls now live in builtin_plugins, below)
    "lighttrain.callbacks",
    "lighttrain.checkpoint",
    "lighttrain.config",
    "lighttrain.data.core",
    "lighttrain.engine",
    "lighttrain.logging",
    "lighttrain.registry",
    "lighttrain.trainers",
    "lighttrain.update_rules",
    "lighttrain.utils",
    # all relocated concrete implementations (losses/optim/models/data/rl/...)
    "lighttrain.builtin_plugins",
]
omit = ["**/_exceptions.py", "**/protocols.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "BLE001"]
# E501 (line length) is intentionally not gated — formatting is left to an
# optional future `ruff format`; gating it now would mean a large manual rewrap.
ignore = ["E501"]
# BLE001 (blind `except Exception`) is now gated to catch NEW broad-excepts.
# The pre-existing best-effort sites are frozen with `# noqa: BLE001` (P3 ratchet
# baseline) — narrow + add reasons when each is revisited.

[tool.ruff.lint.flake8-bugbear]
# Typer's API *is* calling typer.Option/Argument in argument defaults; exempt
# exactly those two so B008 still catches other function-call-in-default bugs.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.12"
# Gate authority = the full *typed* env (CPU torch installed in CI types job;
# see constraints.txt). "Zero tolerance" = the gate is green (no reported
# errors), NOT one-shot strict. strict is intentionally off; ratchet later.
# warn_unused_ignores is on: stale `# type: ignore` comments are flagged so they
# don't accumulate. Optional/untyped third-party imports are handled by the
# per-module ignore_missing_imports overrides below (NOT inline ignores), so the
# CI types env — which installs only `.[dev]`, not optional extras — stays green.
warn_unused_ignores = true

# Third-party without stubs → Any. PER-MODULE only (never global
# ignore_missing_imports) so first-party import breakage still surfaces.
# Includes optional extras (bitsandbytes/lm_eval) absent from the CI types env
# and core deps that ship no py.typed (pyarrow/transformers).
[[tool.mypy.overrides]]
module = [
    "accelerate.*",
    "bitsandbytes.*",
    "deepspeed.*",
    "lm_eval.*",
    "matplotlib.*",
    "optuna.*",
    "pyarrow.*",
    "transformers.*",
    "vllm.*",
    "yaml",
]
ignore_missing_imports = true

# --- P0.4 ratchet quarantine -------------------------------------------------
# These modules carry pre-existing type debt (181 errors at the P0 baseline).
# The gate is green by quarantining them; this is NOT permanent — each entry is
# a cleanup item (see docs/changelog Known limitations). Burn down per module
# and delete from this list. `cli._app` / `cli._runtime` are cleaned as the
# hard DoD of P1 / P2 respectively (do not let them sit here).
# TODO(lighttrain): ratchet down to empty.
[[tool.mypy.overrides]]
module = [
    "lighttrain.builtin_plugins.architectures.diffusion_unet",
    "lighttrain.builtin_plugins.architectures.jepa",
    "lighttrain.builtin_plugins.architectures.mamba",
    "lighttrain.builtin_plugins.architectures.rwkv",
    "lighttrain.builtin_plugins.artifacts.joined_dataset",
    "lighttrain.builtin_plugins.artifacts.producer",
    "lighttrain.builtin_plugins.artifacts.store",
    "lighttrain.builtin_plugins.data.processors.image",
    "lighttrain.builtin_plugins.distributed.model_parallel.ep",
    "lighttrain.builtin_plugins.distributed.model_parallel.tp_aware",
    "lighttrain.builtin_plugins.distributed.strategies.ddp",
    "lighttrain.builtin_plugins.distributed.strategies.fsdp",
    "lighttrain.builtin_plugins.distributed.strategies.zero",
    "lighttrain.builtin_plugins.layer_offload._engine",
    "lighttrain.builtin_plugins.models.peft._adalora",
    "lighttrain.builtin_plugins.models.peft._common",
    "lighttrain.builtin_plugins.models.peft._ia3",
    "lighttrain.builtin_plugins.models.peft._lora",
    "lighttrain.builtin_plugins.objectives.diffusion",
    "lighttrain.builtin_plugins.objectives.masked_denoising",
    "lighttrain.builtin_plugins.quant._qlora",
    "lighttrain.builtin_plugins.trainers._preference_base",
    "lighttrain.builtin_plugins.trainers.grpo",
    "lighttrain.builtin_plugins.trainers.ppo",
    "lighttrain.builtin_plugins.trainers.rm",
    "lighttrain.diagnostics.oom_report",
    "lighttrain.lab.sweep",
    "lighttrain.models.surgery._embedding",
    "lighttrain.models.surgery._replace",
    "lighttrain.models.surgery._tie",
    "lighttrain.trainers.base",
]
ignore_errors = true
